# reminder

./: README.md  docker-compose.yaml
backend/: .env.example  alembic.ini  pyproject.toml
backend/src/: main.py
backend/src/alembic/versions/: ce17b6ce4719_.py  fbe130d517a0_init.py
backend/src/core/: config.py  database.py  models.py
backend/src/core/settings/: base.py  settings.py
backend/src/reminder/: crud.py  main.py  models.py
backend/src/reminder/alembic/: env.py
backend/src/reminder/alembic/versions/: 2d73472cb127_.py  85521b60abff_.py  a35a849ccc3e_.py  b7f19644a69e_.py
backend/src/reminder/api/: deps.py
backend/src/reminder/api/routers/: auth.py  user.py
backend/src/reminder/core/: config.py  database.py  deps.py  models.py  security.py  settings.py
backend/src/reminder/core/settings/: base.py  settings.py
backend/src/reminder/routers/: auth.py  user.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: globals.css  index.css  main.tsx
frontend/src/api/: authService.ts  axiosClient.ts  userService.ts
frontend/src/components/: CategoryChart.tsx  ExpenseChart.tsx  Header.tsx  Navigation.tsx  RecentExpenses.tsx  RemainingFunds.tsx  TaskList.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/routes/: ProtectedRoute.tsx  index.tsx
frontend/src/store/: authStore.tsx
