[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.129.0",
    "pre-commit>=4.5.1",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "ruff>=0.15.2",
    "sqlmodel>=0.0.34",
    "ty>=0.0.17",
]
